service.yaml
apiVersion: v1
kind: Service
metadata:
 name: dev-chingari-chat-helper
 namespace: chingari-chat-helper
 labels: 
  app: dev-chingari-chat-helper
spec:
 type: ClusterIP
 ports:
 - name: dev-chingari-chat-helper
   port: 4011
   targetPort: 4011
 selector: 
  app: dev-chingari-chat-helper
